# space-game

./: CMakeLists.txt  CMakePresets.json  README.md  TODO.txt  main.cpp  settings.json
headers/: game.h
include/: game.h  gameStates.h  json.hpp  resourceManager.h  settings.h  stateManager.h  uiElements.h  uiManager.h
resources/: icon.rc
source/: game.cpp  main.cpp  menuState.cpp  pauseState.cpp  playState.cpp  settings.cpp
